Update first demo more navbar options Signed-off-by: Doctor <karuyanakaido24@gmail.com>

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -120,6 +120,7 @@ a.desc:after {
     margin-top: 0;
 }
 
-.navbar-dark .navbar-nav .nav-link {
-    color: #fff3cd !important;
+.help-block-error{
+    color: red;
+    font-weight: bold;
 }
