--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -15,8 +15,6 @@ body {
 }
 
 .footer {
-    height: 60px;
-    background-color: #f5f5f5;
     border-top: 1px solid #ddd;
     padding-top: 20px;
 }
@@ -120,34 +118,59 @@ a.desc:after {
     margin-top: 0;
 }
 
-.help-block-error{
+.help-block-error {
     color: red;
     font-weight: bold;
 }
 
-@media (min-width: 992px){
-    .dropdown-menu .dropdown-toggle:after{
+@media (min-width: 992px) {
+    .dropdown-menu .dropdown-toggle:after {
         border-top: .3em solid transparent;
         border-right: 0;
         border-bottom: .3em solid transparent;
         border-left: .3em solid;
     }
-    .dropdown-menu .dropdown-menu{
-        margin-left:0; margin-right: 0;
+
+    .dropdown-menu .dropdown-menu {
+        margin-left: 0;
+        margin-right: 0;
     }
-    .dropdown-menu li{
+
+    .dropdown-menu li {
         position: relative;
     }
-    .nav-item .submenu{
+
+    .nav-item .submenu {
         display: none;
         position: absolute;
-        left:100%; top:-7px;
+        left: 100%;
+        top: -7px;
     }
-    .nav-item .submenu-left{
-        right:100%; left:auto;
+
+    .nav-item .submenu-left {
+        right: 100%;
+        left: auto;
     }
-    .dropdown-menu > li:hover{ background-color: #f1f1f1 }
-    .dropdown-menu > li:hover > .submenu{
+
+    .dropdown-menu > li:hover {
+        background-color: #f1f1f1
+    }
+
+    .dropdown-menu > li:hover > .submenu {
         display: block;
     }
+}
+
+@media (max-width: 767px) {
+    .footer-01-fst {
+        display: none;
+    }
+}
+
+.about_address {
+    font-size: 0.8125em;
+}
+
+footer {
+    font-family: Roboto, sans-serif;
 }
