Update Navbar Signed-off-by: vuvuvuvvv <nguyenvu260502@gmail.com>

--- a/frontend/web/css/navbar.css
+++ b/frontend/web/css/navbar.css
@@ -7,3 +7,9 @@
         border-left: 1px solid white;
     }
 }
+.shortName {
+    white-space: nowrap;
+    width: 176px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
