--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -179,7 +179,7 @@ footer {
     cursor: pointer;
 }
 
-p.effect{
+p.effect {
     font-size: 14px;
     font-family: Arial, sans-serif;
     margin: 0 0 10px;
@@ -197,16 +197,20 @@ p.effect{
     margin: 0 10px 0 0;
 }
 
-.social-others{
+.social-others {
     font-size: 150%;
 }
 
-.kh-copyright{
+.fix-footer {
     border-top: 1px solid #ddd;
-    padding: 1em 0;
+    padding: .5em 0;
 }
 
-.fix-footer{
+.kh-copyright{
+    padding: 1.2em 0;
+}
+
+.fix-footer {
     position: fixed;
     left: 0;
     bottom: 0;
