complete form changepassword,user Signed-off-by: binhkdc <ledangbinh18122002@gmail.com>

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -53,3 +53,13 @@
         font-size: 18px;
     }
 }
+
+.image-responsive {
+    width:100%;
+    height: auto;
+}
+
+.avatar{
+    width: 250px;
+    height: 270px;
+}
