fix FormUploadFile Signed-off-by: binhkdc <ledangbinh18122002@gmail.com>

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -55,11 +55,13 @@
 }
 
 .image-responsive {
-    width:100%;
-    height: auto;
+    width:auto;
+    height: 100%;
+    object-fit: cover;
 }
 
 .avatar{
     width: 250px;
     height: 270px;
+    object-fit: contain;
 }
