Update intro-page Signed-off-by: vuvuvuvvv <nguyenvu260502@gmail.com>

--- a/frontend/web/css/index.css
+++ b/frontend/web/css/index.css
@@ -390,3 +390,8 @@ div:hover>div>.reasonIcon {
     color: black;
     border-top: 3px solid #dc3545;
 }
+@media (max-width: 769px){
+    .funcRes {
+        display: none !important;
+    }
+}
