--- a/frontend/web/css/index.css
+++ b/frontend/web/css/index.css
@@ -17,14 +17,13 @@
 }
 .brandFont {
     font-family: "brand";
-    text-shadow: 3px 3px #bfb9b9;
+    text-shadow: 5px 5px 4px #bfb9b9;
 }
 .fontSzBrand {
     font-size: 62px;
 }
 .fontSlideTitle {
     font-family: "Times New Roman";
-    text-shadow: 3px 4px #c3c3c3;
 }
 .fontSzSlideTitle {
     font-size: 32px;
@@ -49,8 +48,8 @@
         top: 18%;
     }
     .secondItemSlide {
-        padding-left: 26px !important;
-        margin-left: 26px !important;
+        padding-left: 25px !important;
+        margin-left: 25px !important;
     }
     .thirdItemSlide {
         padding-left: 34px;
@@ -69,8 +68,8 @@
         font-size: 30px;
     }
     .secondItemSlide {
-        padding-left: 26px !important;
-        margin-left: 26px !important;
+        padding-left: 25px !important;
+        margin-left: 25px !important;
     }
     .thirdItemSlide {
         padding-left: 34px;
@@ -95,8 +94,8 @@
         display: none !important;
     }
     .secondItemSlide {
-        padding-left: 26px !important;
-        margin-left: 26px !important;
+        padding-left: 25px !important;
+        margin-left: 25px !important;
     }
     .thirdItemSlide {
         padding-left: 34px;
@@ -115,8 +114,8 @@
         font-size: 30px;
     }
     .secondItemSlide {
-        padding-left: 26px !important;
-        margin-left: 26px !important;
+        padding-left: 25px !important;
+        margin-left: 25px !important;
     }
     .thirdItemSlide {
         padding-left: 34px;
@@ -138,8 +137,8 @@
         font-size: 26px;
     }
     .secondItemSlide {
-        padding-left: 26px !important;
-        margin-left: 26px !important;
+        padding-left: 25px !important;
+        margin-left: 25px !important;
     }
     .thirdItemSlide {
         padding-left: 34px;
@@ -161,8 +160,8 @@
         font-size: 26px;
     }
     .secondItemSlide {
-        padding-left: 26px !important;
-        margin-left: 26px !important;
+        padding-left: 25px !important;
+        margin-left: 25px !important;
     }
     .thirdItemSlide {
         padding-left: 34px;
@@ -187,8 +186,8 @@
         font-size: 22px;
     }
     .secondItemSlide {
-        padding-left: 26px !important;
-        margin-left: 26px !important;
+        padding-left: 25px !important;
+        margin-left: 25px !important;
     }
     .thirdItemSlide {
         padding-left: 34px;
@@ -209,8 +208,8 @@
         display: none !important;
     }
     .secondItemSlide {
-        padding-left: 26px !important;
-        margin-left: 26px !important;
+        padding-left: 25px !important;
+        margin-left: 25px !important;
     }
     .thirdItemSlide {
         padding-left: 34px;
@@ -250,7 +249,7 @@ a {
 }
 .fontTitle {
     font-family: "Times New Roman";
-    font-size: 36px;
+    font-size: 42px;
     font-weight: bold;
 }
 .iIcon {
@@ -394,4 +393,279 @@ div:hover>div>.reasonIcon {
     .funcRes {
         display: none !important;
     }
+}
+#h2 {
+    text-transform: uppercase;
+    font-family: "Times New Roman", sans-serif;
+    font-weight: bold;
+}
+#carousel {
+    width: 100%;
+    margin: 0;
+}
+.img-box {
+    width: 15vw;
+    height: 15vw;
+    margin: 0 auto;
+    border-radius: 50%
+}
+#img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 50%
+}
+@media (max-width: 576px){
+    .img-box{
+        width: 30vw ;
+        height: 30vw;
+    }
+}
+@media (min-width: 576px) and (max-width: 768px){
+    .img-box{
+        width: 25vw ;
+        height: 25vw;
+    }
+}
+/*carousel clients*/
+.heading {
+    text-align: center;
+    color: #454343;
+    font-size: 30px;
+    font-weight: 700;
+    position: relative;
+    margin-bottom: 70px;
+    text-transform: uppercase;
+    z-index: 4;
+}
+.white-heading{
+    color: #ffffff;
+}
+.heading:after {
+    content: ' ';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    height: 40px;
+    width: 180px;
+    border-radius: 4px;
+    transform: translateX(-50%);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.white-heading:after {
+    background: url(https://i.ibb.co/d7tSD1R/heading-line-white.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.heading #spanTesti {
+    font-size: 18px;
+    display: block;
+    font-weight: 500;
+}
+.white-heading #spanTesti {
+    color: #ffffff;
+}
+/*testomonials*/
+.slider {
+    width: 100%;
+}
+.slider input {
+    display: none;
+}
+.testimonials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    min-height: 400px;
+    perspective: 1000px;
+    overflow: hidden;
+}
+.testimonials .item {
+    top: 0;
+    position: absolute;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 30px;
+    width: 450px;
+    text-align: center;
+    transition: transform 0.4s;
+    -webkit-transform-style: preserve-3d;
+    box-shadow: 0 0 30px rgba(134, 134, 134, 0.3);
+    user-select: none;
+    cursor: pointer;
+}
+.testimonials .item img {
+    width: 120px;
+    border-radius: 50%;
+    border: 5px solid #3B344D;
+}
+.testimonials .item h2 {
+    font-size: 14px;
+}
+.dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.dots label {
+    display: block;
+    height: 5px;
+    width: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: yellow;
+    margin: 7px;
+    transition: transform 0.2s, color 0.2s;
+}
+
+/* First */
+#t-1:checked ~ .dots label[for="t-1"] {
+    transform: scale(2);
+    background-color: red;
+}
+#t-1:checked ~ .dots label[for="t-2"] {
+    transform: scale(1.5);
+    background-color: orange;
+}
+#t-1:checked ~ .testimonials label[for="t-1"] {
+    z-index: 4;
+}
+#t-1:checked ~ .testimonials label[for="t-2"] {
+    transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+    z-index: 3;
+}
+#t-1:checked ~ .testimonials label[for="t-3"] {
+    transform: translateX(600px) translateZ(-180px) rotateY(-25deg);
+    z-index: 2;
+}
+#t-1:checked ~ .testimonials label[for="t-4"] {
+    transform: translateX(900px) translateZ(-270px) rotateY(-35deg);
+    z-index: 1;
+}
+#t-1:checked ~ .testimonials label[for="t-5"] {
+    transform: translateX(1200px) translateZ(-360px) rotateY(-45deg);
+}
+
+/* Second */
+#t-2:checked ~ .dots label[for="t-1"] {
+    transform: scale(1.5);
+    background-color: orange;
+}
+#t-2:checked ~ .dots label[for="t-2"] {
+    transform: scale(2);
+    background-color: red;
+}
+#t-2:checked ~ .dots label[for="t-3"] {
+    transform: scale(1.5);
+    background-color: orange;
+}
+#t-2:checked ~ .testimonials label[for="t-1"] {
+    transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+}
+#t-2:checked ~ .testimonials label[for="t-2"] {
+    z-index: 3;
+}
+#t-2:checked ~ .testimonials label[for="t-3"] {
+    transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+    z-index: 2;
+}
+#t-2:checked ~ .testimonials label[for="t-4"] {
+    transform: translateX(600px) translateZ(-180px) rotateY(-25deg);
+    z-index: 1;
+}
+#t-2:checked ~ .testimonials label[for="t-5"] {
+    transform: translateX(900px) translateZ(-270px) rotateY(-35deg);
+}
+
+/* Third */
+#t-3:checked ~ .dots label[for="t-2"] {
+    transform: scale(1.5);
+    background-color: orange;
+}
+#t-3:checked ~ .dots label[for="t-3"] {
+    transform: scale(2);
+    background-color: red;
+}
+#t-3:checked ~ .dots label[for="t-4"] {
+    transform: scale(1.5);
+    background-color: orange;
+}
+#t-3:checked ~ .testimonials label[for="t-1"] {
+    transform: translateX(-600px) translateZ(-180px) rotateY(25deg);
+}
+#t-3:checked ~ .testimonials label[for="t-2"] {
+    transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+}
+#t-3:checked ~ .testimonials label[for="t-3"] {
+    z-index: 3;
+}
+#t-3:checked ~ .testimonials label[for="t-4"] {
+    transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+    z-index: 2;
+}
+#t-3:checked ~ .testimonials label[for="t-5"] {
+    transform: translateX(600px) translateZ(-180px) rotateY(-25deg);
+}
+
+/* Fourth */
+#t-4:checked ~ .dots label[for="t-3"] {
+    transform: scale(1.5);
+    background-color: orange;
+}
+#t-4:checked ~ .dots label[for="t-4"] {
+    transform: scale(2);
+    background-color: red;
+}
+#t-4:checked ~ .dots label[for="t-5"] {
+    transform: scale(1.5);
+    background-color: orange;
+}
+#t-4:checked ~ .testimonials label[for="t-1"] {
+    transform: translateX(-900px) translateZ(-270px) rotateY(35deg);
+}
+#t-4:checked ~ .testimonials label[for="t-2"] {
+    transform: translateX(-600px) translateZ(-180px) rotateY(25deg);
+}
+#t-4:checked ~ .testimonials label[for="t-3"] {
+    transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+    z-index: 2;
+}
+#t-4:checked ~ .testimonials label[for="t-4"] {
+    z-index: 3;
+}
+#t-4:checked ~ .testimonials label[for="t-5"] {
+    transform: translateX(300px) translateZ(-90px) rotateY(-15deg);
+}
+
+/* Fifth */
+#t-5:checked ~ .dots label[for="t-4"] {
+    transform: scale(1.5);
+    background-color: orange;
+}
+#t-5:checked ~ .dots label[for="t-5"] {
+    transform: scale(2);
+    background-color: red;
+}
+#t-5:checked ~ .testimonials label[for="t-1"] {
+    transform: translateX(-1200px) translateZ(-360px) rotateY(45deg);
+}
+#t-5:checked ~ .testimonials label[for="t-2"] {
+    transform: translateX(-900px) translateZ(-270px) rotateY(35deg);
+    z-index: 1;
+}
+#t-5:checked ~ .testimonials label[for="t-3"] {
+    transform: translateX(-600px) translateZ(-180px) rotateY(25deg);
+    z-index: 2;
+}
+#t-5:checked ~ .testimonials label[for="t-4"] {
+    transform: translateX(-300px) translateZ(-90px) rotateY(15deg);
+    z-index: 3;
+}
+#t-5:checked ~ .testimonials label[for="t-5"] {
+    z-index: 4;
 }
