--- a/frontend/web/css/testi.css
+++ b/frontend/web/css/testi.css
@@ -16,6 +16,17 @@ img {
 Main components 
 
 -------------------------------- */
+.cd-testimonials-wrapper {
+  position: relative;
+  width: 90%;
+  max-width: 768px;
+  background-color: #39393c;
+  margin: 2em auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  padding: 20px 40px 70px;
+  z-index: 1;
+}
 .cd-testimonials {
   text-align: center;
 }
