add recommend page Signed-off-by: binhkdc <ledangbinh18122002@gmail.com>

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -60,9 +60,14 @@
     object-fit: cover;
 }
 
-.avatar{
+.avatar {
     width: 250px;
     height: 270px;
     object-fit: contain;
+}
+
+.image-recommend {
+    width: 300px;
+    height: 180px;
 }
 
