--- a/frontend/web/css/index.css
+++ b/frontend/web/css/index.css
@@ -69,6 +69,244 @@
     opacity: 0;
     transform: scale(0.1, 1);
 }
+
+.contact-button {
+    position: relative;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    font-size: 1.2em;
+    border: 2px solid white;
+    border-radius: 4px;
+    padding: 20px 60px 20px 55px;
+    transition: 0.3s ease-in-out;
+}
+.contact-button span {
+    text-transform: none;
+    position: absolute;
+    color: #ee283e;
+    top: 20px;
+    left: 32px;
+    opacity: 0;
+    transition: all 0s ease 0s;
+}
+.contact-button:hover {
+    transition: 0.3s ease-in-out;
+    border: 2px solid white;
+    border-radius: 50px;
+    background-color: white;
+    color: white;
+}
+.contact-button:hover > span {
+    opacity: 1;
+    transition: all 0.25s ease-in-out 0.1s;
+}
+.contact-button:hover:before {
+    transition: 0.3s ease-in-out;
+    background-color: #ee283e;
+}
+.contact-button:before, .contact-button:after {
+    content: "";
+    position: absolute;
+    top: -14px;
+    left: -12px;
+    width: 132px;
+    height: 25px;
+}
+.contact-button:before {
+    border: 2px solid #ee283e;
+    background-color: #1f3944;
+    transform: skew(-25deg);
+    transition: 0.3s ease-in-out;
+}
+.contact-button:after {
+    content: "Luôn sẵn sàng phục vụ !";
+    font-size: 0.45em;
+    top: -7px;
+    left: -10px;
+    color: white !important;
+}
+.buttonPoints {
+    border: 2px solid #9b9b9b;
+    cursor: pointer;
+    letter-spacing: 0.2125rem;
+    line-height: 1;
+    overflow: hidden;
+    padding: 20px 30px;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    transition:
+            background 5s cubic-bezier(0.19, 1, 0.22, 1),
+            border 1s cubic-bezier(0.19, 1, 0.22, 1),
+            color 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+    user-select: none;
+}
+
+.buttonPoints a {
+    color: #9b9b9b;
+    font-family: "Times New Roman", sans-serif;
+    text-decoration: none;
+}
+
+.buttonPoints .mask {
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 100px;
+    position: absolute;
+    transform: translate3d(-120%, -50px, 0) rotate3d(0, 0, 1, 135deg);
+    transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+    width: 350px;
+}
+
+.buttonPoints .shift {
+    display: inline-block;
+    transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+    vertical-align: text-top;
+}
+
+.buttonPoints:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+    border-color: #fff;
+    box-shadow: 0 0 5px rgba(255, 245, 245, 0.8);
+    transition: background 0s;
+}
+
+.button:hover a {
+    color: #ffffff;
+}
+
+.buttonPoints:hover .mask {
+    background-color: #fff;
+    transform: translate3d(120%, -100px, 0) rotate3d(0, 0, 1, 90deg);
+}
+
+.buttonPoints:hover .shift {
+    transform: translateX(15px);
+}
+
+.buttonPoints:active {
+    background-color: #fff;
+}
+
+.buttonPoints:active a {
+    color: #ff0000;
+}
+.jumbotron h1 {
+    color: #353535;
+}
+span.icon {
+    margin: 0 5px;
+    color: #D64541;
+}
+/* Global Button Styles */
+a.animated-button:link, a.animated-button:visited {
+    width: 70%;
+    position: relative;
+    display: block;
+    padding: 14px 15px;
+    color: #fff;
+    font-size:14px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    letter-spacing: .08em;
+    border-radius: 0;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+    transition: all 1s ease;
+}
+/* Thar Buttons */
+a.animated-button.thar-two {
+    font-family: "Times New Roman", sans-serif;
+    color: #e51b23;
+    width: 150px;
+    display: block;
+    position: relative;
+    border: 2px solid #e51b23;
+    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+a.animated-button.thar-two:hover {
+    color: #ffffff;
+    background-color: transparent;
+}
+a.animated-button.thar-two:hover:before {
+    top: 0%;
+    bottom: auto;
+    height: 100%;
+}
+a.animated-button.thar-two:before {
+    display: block;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    height: 0px;
+    width: 100%;
+    z-index: -1;
+    content: '';
+    color: #000 !important;
+    background: #e51b23;
+    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+a.animated-button.thar-three {
+    font-family: "Times New Roman", sans-serif;
+    color: #e51b23;
+    cursor: pointer;
+    display: block;
+    position: relative;
+    border: 2px solid #e51b23;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
+a.animated-button.thar-three:hover {
+    color: #ffffff !important;
+    background-color: transparent;
+}
+a.animated-button.thar-three:hover:before {
+    left: 0%;
+    right: auto;
+    width: 100%;
+}
+a.animated-button.thar-three:before {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 100%;
+    width: 0px;
+    z-index: -1;
+    content: '';
+    color: #000 !important;
+    background: #e51b23;
+    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
+@media (min-width: 1200px) {
+    .btnShowMore {
+        left: 43.2%;
+    }
+}
+@media (min-width: 992px) and (max-width: 1200px){
+    .btnShowMore {
+        left: 40.5%;
+    }
+}
+@media (min-width: 768px) and (max-width: 992px){
+    .btnShowMore {
+        left: 36.5%;
+    }
+}
+@media (min-width: 576px) and (max-width: 768px){
+    .btnShowMore {
+        left: 29.5%;
+    }
+}
+@media (max-width: 576px){
+    .btnShowMore {
+        left: 29.2%
+    }
+}
 /*endbtn*/
 .bgGray {
     background-color: #bfbfbd;
@@ -81,7 +319,7 @@
     font-size: 62px;
 }
 .fontSlideTitle {
-    font-family: "Times New Roman";
+    font-family: "Times New Roman", sans-serif;
 }
 .fontSzSlideTitle {
     font-size: 32px;
@@ -305,7 +543,7 @@ a {
     text-decoration: none !important;
 }
 .fontTitle {
-    font-family: "Times New Roman";
+    font-family: "Times New Roman", sans-serif;
     font-size: 42px;
     font-weight: bold;
 }
@@ -687,13 +925,6 @@ div:hover>div>.reasonIcon {
     z-index: 4;
 }
 /*carousel */
-.testimonialsRes {
-    background: url("https://i.ibb.co/JRrHmhv/shanghai.jpg") center center no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    padding: 50px 0 70px;
-    position: relative;
-}
 .testimonialsRes:before {
     content: "";
     background: rgba(0, 0, 0, 0.5);
