fix content of intro-page & change width of navbar Signed-off-by: vuvuvuvvv <nguyenvu260502@gmail.com>

--- a/frontend/web/css/index.css
+++ b/frontend/web/css/index.css
@@ -220,6 +220,7 @@ a.animated-button:link, a.animated-button:visited {
     width: 70%;
     position: relative;
     display: block;
+    margin: 25px auto;
     padding: 14px 15px;
     color: #fff;
     font-size:14px;
