--- a/frontend/web/css/navbar.css
+++ b/frontend/web/css/navbar.css
@@ -13,3 +13,8 @@
 #taskbar {
     z-index: 9999;
 }
+.row-full {
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+}
